[gd_scene load_steps=14 format=3 uid="uid://dcgjb6s3t1jnu"]

[ext_resource type="Script" path="res://scripts/whack_a_mole/mole.gd" id="2_m02v3"]
[ext_resource type="Texture2D" uid="uid://bsahen8x4yfpu" path="res://assets/whack_a_mole/whack_refem.png" id="2_p602s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nmv6v"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lyeio"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_om1y6"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vbljt"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d5w7e"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Animation" id="Animation_18ll0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_6nt77"]
resource_name = "event"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -40), Vector2(0, -40), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 1.8, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ls0l8"]
_data = {
"RESET": SubResource("Animation_18ll0"),
"event": SubResource("Animation_6nt77")
}

[sub_resource type="Animation" id="Animation_lv288"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_miby5"]
resource_name = "event"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e2tn3"]
_data = {
"RESET": SubResource("Animation_lv288"),
"event": SubResource("Animation_miby5")
}

[node name="mole" type="Node2D"]
script = ExtResource("2_m02v3")

[node name="mole" type="Button" parent="."]
layout_direction = 1
offset_right = 136.0
offset_bottom = 136.0
scale = Vector2(0.5, 0.5)
theme_override_styles/normal = SubResource("StyleBoxFlat_nmv6v")
theme_override_styles/hover = SubResource("StyleBoxFlat_lyeio")
theme_override_styles/pressed = SubResource("StyleBoxFlat_om1y6")
theme_override_styles/disabled = SubResource("StyleBoxFlat_vbljt")
theme_override_styles/focus = SubResource("StyleBoxFlat_d5w7e")
disabled = true

[node name="sprite" type="Sprite2D" parent="mole"]
position = Vector2(0, 28)
scale = Vector2(2, 2)
texture = ExtResource("2_p602s")
centered = false
hframes = 2

[node name="anim" type="AnimationPlayer" parent="mole"]
libraries = {
"": SubResource("AnimationLibrary_ls0l8")
}

[node name="anim2" type="AnimationPlayer" parent="mole"]
libraries = {
"": SubResource("AnimationLibrary_e2tn3")
}

[node name="timer" type="Timer" parent="mole"]
wait_time = 5.0

[connection signal="pressed" from="mole" to="." method="_on_mole_pressed"]
[connection signal="timeout" from="mole/timer" to="." method="_on_timer_timeout"]
